--- a/style.css
+++ b/style.css
@@ -3,8 +3,13 @@
 }
 .workshop-grid{
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
     row-gap: 20px;
+    grid-template-columns: 1fr;
     column-gap: 20px;
-    
+    padding: 15px;
+}
+@media screen and (min-width: 600px){
+    .workshop-grid{
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
