--- a/style.css
+++ b/style.css
@@ -8,6 +8,9 @@
     column-gap: 20px;
     padding: 15px;
 }
+a > .card{
+    color: black;
+}
 @media screen and (min-width: 600px){
     .workshop-grid{
         grid-template-columns: repeat(2, 1fr);
