--- a/style.css
+++ b/style.css
@@ -11,6 +11,9 @@
 a > .card{
     color: black;
 }
+.single-image{
+    width: 100%;
+}
 @media screen and (min-width: 600px){
     .workshop-grid{
         grid-template-columns: repeat(2, 1fr);
